# PwrAxiom

./: Cargo.toml  README.md  install.sh  installer.sh  main.c  monitor.c  power_core.c  power_core.h  pwraxiom
gatherer/: Cargo.toml
gatherer/src/: lib.rs
src/: main.c  main.rs  monitor.c  monitor.h  power_core.c  power_core.h
src/backend/: executor.rs  hardware.rs  manager.rs  mod.rs  profiles.rs
src/ui/: controls.rs  dashboard.rs  mod.rs  settings.rs  spotlight.rs  style.css
