[package]
name = "power_axiom"
version = "0.2.0"
edition = "2021"

[workspace]
members = ["gatherer"]

[dependencies]
gio = { version = "0.18", features = ["v2_64"] }
gtk4 = "0.8"
glib = "0.19"
sysinfo = "0.30"
nvml-wrapper = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gatherer = { path = "gatherer" }
